--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.h2.console.enabled=true
 
 spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb;MODE=MYSQL
 spring.datasource.hikari.username=sa
+
+spring.profiles.include=oauth
+spring.session.store-type=jdbc
